# ecommerce_detail_page

./: .gitignore  CLAUDE.md  README.md  claude-progress.txt  feature_list.json  init.sh
backend/: pyproject.toml  requirements.txt
backend/app/: database.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: payments.py  products.py  reviews.py  sellers.py
backend/tests/: conftest.py  test_payments.py  test_products.py  test_reviews.py  test_sellers.py
docs/: mkdocs.yml
docs/design/: backend-design.md  frontend-mechanism.md  frontend-style-guide.md  run.md
docs/docs/: api-reference.md  architecture.md  examples.md  index.md  modules.md  quickstart.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Breadcrumb.tsx  ImageGallery.tsx  PaymentMethods.tsx  PriceBlock.tsx  ProductDescription.tsx  ProductInfo.tsx  ProductSpecs.tsx  PurchasePanel.tsx  RelatedProducts.tsx  ReviewsSection.tsx  SellerCard.tsx  SidebarRelatedProducts.tsx  StockShipping.tsx  TopBar.tsx
frontend/src/pages/: ProductDetail.tsx
frontend/src/styles/: product.css
frontend/src/types/: index.ts
scripts/: auto_run.sh
